# Advanced-Robotics-Assignment

./: README.md
advance_robotics_assignment/assignment/assignment1_FK/: forword_kinematics.py
advance_robotics_assignment/assignment/assignment2_IK/: inverse_kinematics.py
advance_robotics_assignment/simulation/: CMakeLists.txt  package.xml
advance_robotics_assignment/simulation/launch/: assignment1_fk.launch  assignment2_lk.launch  single.launch
advance_robotics_assignment/simulation/scripts/: block_frame.py  detections.py  draw.py  jig.py  position_demo.py  static_poses.py  torque_demo.py
advance_robotics_assignment/solution/: solveFK.py  solveIK.py  transformation_utils.py
franka_controller/: interfaces.py
