<?xml version="1.0"?>
<package>
  <name>advance_robotics_assignment</name>
  <version>0.0.0</version>
  <description>Launch files, gazebo configurations, and scripts necessary for advance robotics assignments</description>
  <author>Weijian Zhang</author>
  <maintainer email="jwelde@seas.upenn.edu">Jake Welde</maintainer>
  <maintainer email="srozen01@seas.upenn.edu">Shane Rozen-Levy</maintainer>
  <maintainer email="vmedw@seas.upenn.edu">Victoria Edwards</maintainer>
  <maintainer email="liuxiu@seas.upenn.edu">Xu Liu</maintainer>
  <maintainer email="wxz163@student.bham.ac.uk">Weijian Zhang</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>


</package>
